--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -176,14 +176,16 @@ nav:
   - ১ মিলিয়ন ইন্টারনেট গ্রাহক: index.md
   - পেছনের দর্শন: 
     - কৃত্রিম বুদ্ধিমত্তা ও নেটওয়ার্ক অটোমেশনের রাস্তা: philosophy.md
-  - নেটওয়ার্ক সোর্স অফ ট্রুথ: nsot.md
+  - নেটওয়ার্ক সোর্স অফ ট্রুথ (NSoT): nsot.md
   - উৎসর্গ: dedication.md
-  - ইন্ডাস্ট্রি ট্রেন্ড: trend.md
+#  - ইন্ডাস্ট্রি ট্রেন্ড: trend.md
   - বইয়ের সম্ভাব্য চ্যাপ্টার স্ট্রাকচার: contents1.md
-  - অথবা শুধুমাত্র NSOT: contents2.md
+  - অথবা শুধুমাত্র NSoT: contents2.md
   - কেন NSoT ছাড়া স্কেল করা অসম্ভব: nsot_scale.md
   - ইনটেন্ডেড স্টেট বনাম অ্যাকচুয়াল স্টেট: two_states.md
   - NSoT-এর কোর প্রিন্সিপাল এবং Nautobot: nsot_core.md
+  - Nautobot ইনস্টলেশন: installation.md
+  - Nautobot ডেটা মডেল - নেটওয়ার্কের যোগসুত্র: datamodel.md
   - বইটা এখনো লেখা চলছে: status.md
 #     - কৃতজ্ঞতা এবং বাড়তি রিডিং: courtesy.md
 # #    - কেন বইটা লিখতে চাইলাম?: why-writing.md
